# py-ecs-tds

./: .gitignore  README.md  docker-compose.yaml  lint.sh  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  index.ts
game/: collision.py  ecs.py  geometry.py  messages.py  systems.py  ws_app.py
nginx/: nginx.conf
tests/: test_ecs.py
